# hsouli_parsing

./: Dockerfile  README.md  pyproject.toml
parsing_assignment/: __main__.py  parser.py
parsing_assignment/conditions/: __init__.py  base.py  char_existence.py  json.py  multiple_of.py  suffix.py
parsing_assignment/helpers/: io.py  logger.py  timer.py
tests/: __init__.py  test_parser.py
tests/conditions/: __init__.py  test_base.py  test_char_existence.py  test_json.py  test_multiple_of.py  test_suffix.py
tests/helpers/: test_io.py  test_logger.py  test_timer.py
